--- a/back-express/package.json
+++ b/back-express/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^1.2.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^5.1.0",
