--- a/back-express/package.json
+++ b/back-express/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google/genai": "^1.2.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^5.1.0",
     "mysql2": "^3.9.2"
