--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,7 +23,8 @@
     "react-native-web": "^0.20.0",
     "react-native-screens": "~4.11.1",
     "react-native-safe-area-context": "5.4.0",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
