--- a/back-express/package.json
+++ b/back-express/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^5.1.0",
+    "multer": "^2.0.1",
     "mysql2": "^3.9.2"
   },
   "devDependencies": {
