--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,7 +24,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-safe-area-context": "5.4.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "react-native-svg": "15.11.2"
+    "react-native-svg": "15.11.2",
+    "expo-image-picker": "~16.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
