--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,16 +22,17 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.20.0",
-    "react-native-reanimated": "~3.17.4"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "babel-plugin-module-resolver": "^5.0.2"
+    "babel-plugin-module-resolver": "^5.0.2",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
